...
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                <color key="tintColor" red="0.72490352030000005" green="0.72490352030000005" blue="0.72490352030000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <state key="normal" title="Home Page">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                <color key="tintColor" red="0.72490352030000005" green="0.72490352030000005" blue="0.72490352030000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <state key="normal" title="Login">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                <color key="tintColor" red="0.72490352030000005" green="0.72490352030000005" blue="0.72490352030000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                <state key="normal" title="Sign In">
                                                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                </state>
...
                                                                </constraints>
                                                            </imageView>
                                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="User profile img.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="2Nw-FY-zKs">
                                                                <rect key="frame" x="107" y="73" width="200" height="200"/>
                                                                <constraints>
...
                                                                <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="FirstName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Fgg-1q-fYz">
                                                                        <rect key="frame" x="0.0" y="0.0" width="199.5" height="45"/>
                                                                        <constraints>
...
                                                                        <textInputTraits key="textInputTraits"/>
                                                                    </textField>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="LastName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IdO-4T-Urf">
                                                                        <rect key="frame" x="214.5" y="0.0" width="199.5" height="45"/>
                                                                        <nil key="textColor"/>
...
                                                                <rect key="frame" x="0.0" y="50" width="414" height="245"/>
                                                                <subviews>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="E-mail" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5Lx-vY-Epq">
                                                                        <rect key="frame" x="0.0" y="0.0" width="414" height="45"/>
                                                                        <constraints>
...
                                                                        <textInputTraits key="textInputTraits"/>
                                                                    </textField>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Contact Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Xbq-jQ-uvR">
                                                                        <rect key="frame" x="0.0" y="50" width="414" height="45"/>
                                                                        <nil key="textColor"/>
...
                                                                        <textInputTraits key="textInputTraits"/>
                                                                    </textField>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Department" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="CB7-Uf-Mbs">
                                                                        <rect key="frame" x="0.0" y="100" width="414" height="45"/>
                                                                        <nil key="textColor"/>
...
                                                                        <textInputTraits key="textInputTraits"/>
                                                                    </textField>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kw2-VQ-4Mt">
                                                                        <rect key="frame" x="0.0" y="150" width="414" height="45"/>
                                                                        <nil key="textColor"/>
...
                                                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                                                    </textField>
                                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Confirm Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ehU-pk-for">
                                                                        <rect key="frame" x="0.0" y="200" width="414" height="45"/>
