...
                alert.showAlert(title: "Error with Save", message: "Please Fill Department:",buttonText: "Add Missing Field")
                return}
            if (txtCpassword.text == "") {
                alert.showAlert(title: "Error with Save", message: "Please Fill Confirm Password:",buttonText: "Add Missing Field")
                return}
            if (txtCpassword.text != txtPassword.text ) {
                alert.showAlert(title: "Error with Save", message: "Password And Confirm Password Should Be Match",buttonText: "Fix Error")
                return}
           
            let alert = AlertFunction()
            
            let firstname = txtFirstname.text!.trimmingCharacters(in:.whitespacesAndNewlines)
            let lastname = txtLastname.text!.trimmingCharacters(in:.whitespacesAndNewlines)
...
